Simplifying the cell size computing

The current cell should not be used when computing the cell size. This
is an issue with iOS 9. Also, there is no need for subclassing -[UIView
layoutSubviews] when adding the correct layout of the UILabel.

Bug: 757808
Change-Id: Ib28df668d3f33e95c9d6c62f74fb0ae157760bab